# Panopticon

./: panopticon-stop.sh  panopticon.sh
crates/netsec-gui/: Cargo.toml
crates/netsec-gui/assets/webview/: index.html  widget.js  widget.js.map
crates/netsec-gui/src/: app.rs  message.rs
crates/netsec-gui/src/api/: client.rs  models.rs
crates/netsec-gui/src/state/: terminal.rs
crates/netsec-gui/src/views/: alerts.rs  browsing.rs  header.rs  inspector.rs  mod.rs  vuln_dashboard.rs
crates/netsec-gui/src/webview/: canvas_webview.rs  ipc.rs
crates/netsec-pty/src/: session.rs
crates/netsec-threat/: Cargo.toml
crates/netsec-threat/src/: arp_spoof.rs  covert_channel.rs  dns_hijack.rs  entropy.rs  evil_twin.rs  infostealer.rs  lib.rs  malvertising.rs
frontend/: App.tsx  package.json  types.ts
frontend/components/: ConfigurationView.tsx  DataExplorer.tsx  ExportView.tsx  Header.tsx  HubDashboard.tsx  LogsViewer.tsx  SystemStatus.tsx  TerminalWorkspace.tsx  XTerminal.tsx
frontend/services/: api.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: commands.rs  main.rs  settings.rs
frontend/widget/: index.tsx
python/netsec/adapters/: nmap.py
python/netsec/api/: app.py
python/netsec/api/routers/: browsing.py  config_api.py  devices.py  export.py  hub.py  logs.py  terminal.py
python/netsec/core/: events.py  terminal.py
python/netsec/services/: browsing_service.py  device_service.py
