[package]
name = "netsec-threat"
version.workspace = true
edition.workspace = true

[dependencies]
netsec-models = { workspace = true }
netsec-scanner = { workspace = true }
netsec-events = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

tracing-subscriber = { workspace = true }

[[bin]]
name = "threat-scan"
path = "src/bin/threat_scan.rs"

[dev-dependencies]
tempfile = "3"
